--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -17,12 +17,17 @@
   <properties>
     <spring-cloud.version>2.1.2.RELEASE</spring-cloud.version>
     <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
+    <feign-core.version>10.2.3</feign-core.version>
     <httpclient.version>4.5.9</httpclient.version>
     <jackson-databind.version>2.9.10</jackson-databind.version>
     <jmockit.version>1.36</jmockit.version>
     <junit.version>4.12</junit.version>
     <cse-dependency.version>2.5.0</cse-dependency.version>
+    <servicecomb.version>1.2.1</servicecomb.version>
     <spring.version>5.1.8.RELEASE</spring.version>
+    <dtm-client.version>1.0.2</dtm-client.version>
+    <guava.version>27.0.1-jre</guava.version>
+    <snakeyaml.version>1.24</snakeyaml.version>
   </properties>
 
   <dependencyManagement>
@@ -80,6 +85,29 @@
         <version>${project.version}</version>
       </dependency>
 
+      <!-- huawei parts -->
+      <dependency>
+        <groupId>org.apache.servicecomb</groupId>
+        <artifactId>foundation-common</artifactId>
+        <version>${servicecomb.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.huawei.paas.cse</groupId>
+        <artifactId>foundation-auth</artifactId>
+        <version>${cse-dependency.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.huawei.paas.dtm</groupId>
+        <artifactId>dtm-client</artifactId>
+        <version>${dtm-client.version}</version>
+        <exclusions>
+          <exclusion>
+            <artifactId>spring-boot-starter</artifactId>
+            <groupId>org.springframework.boot</groupId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+
       <!-- 3rd parties -->
       <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -110,11 +138,6 @@
         <scope>import</scope>
       </dependency>
       <dependency>
-        <groupId>com.huawei.paas.cse</groupId>
-        <artifactId>foundation-auth</artifactId>
-        <version>${cse-dependency.version}</version>
-      </dependency>
-      <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
         <version>${spring.version}</version>
@@ -123,6 +146,21 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
         <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.github.openfeign</groupId>
+        <artifactId>feign-core</artifactId>
+        <version>${feign-core.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.yaml</groupId>
+        <artifactId>snakeyaml</artifactId>
+        <version>${snakeyaml.version}</version>
       </dependency>
       <dependency>
         <groupId>org.jmockit</groupId>
