--- a/spring-cloud-huawei-sample/swagger-demo/springcloud-provider/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/swagger-demo/springcloud-provider/src/main/resources/application.yaml
@@ -7,6 +7,8 @@ spring:
     name: swagger-provider
   cloud:
     servicecomb:
+      swagger:
+        enableJavaChassisAdapter: true
       discovery:
         enabled: true
         address: http://127.0.0.1:30100
@@ -14,6 +16,3 @@ spring:
         appName: swagger
         version: 0.0.1
         healthCheckInterval: 30
-
-withJavaChassis: true
-
