--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -28,6 +28,7 @@
     <guava.version>27.0.1-jre</guava.version>
     <snakeyaml.version>1.24</snakeyaml.version>
     <commons-configuration.version>1.10</commons-configuration.version>
+    <servicecomb.version>1.3.0</servicecomb.version>
   </properties>
 
   <dependencyManagement>
@@ -106,6 +107,11 @@
             <groupId>org.springframework.boot</groupId>
           </exclusion>
         </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.servicecomb</groupId>
+        <artifactId>foundation-common</artifactId>
+        <version>${servicecomb.version}</version>
       </dependency>
 
       <!-- 3rd parties -->
