--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,14 @@
 
   <groupId>com.huaweicloud</groupId>
   <artifactId>spring-cloud-huawei</artifactId>
-  <version>1.3.2</version>
+  <version>1.3.3-Hoxton-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Spring Cloud Huawei</name>
 
   <properties>
+    <java.version>1.8</java.version>
+    <spring-cloud.version>Greenwich.SR5</spring-cloud.version>
+    <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
   </properties>
 
   <modules>
@@ -64,8 +67,6 @@
     </developerConnection>
     <tag>HEAD</tag>
   </scm>
-
-
 
   <profiles>
     <profile>
