--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -5,14 +5,14 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei</artifactId>
-    <version>1.3.2</version>
+    <version>1.3.3-Hoxton-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>spring-cloud-huawei-dependencies</artifactId>
   <packaging>pom</packaging>
-  <version>1.3.2</version>
+  <version>1.3.3-Hoxton-SNAPSHOT</version>
   <name>Spring Cloud Huawei Dependencies</name>
   <properties>
     <spring-cloud.version>2.2.2.RELEASE</spring-cloud.version>
