--- a/spring-cloud-huawei-sample/config-demo/pom.xml
+++ b/spring-cloud-huawei-sample/config-demo/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>spring-cloud-huawei-sample</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.3.2</version>
+    <version>1.3.3-Hoxton-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>config-demo</artifactId>
