--- a/spring-cloud-huawei-sample/discovery-demo/product-consumer-feign/pom.xml
+++ b/spring-cloud-huawei-sample/discovery-demo/product-consumer-feign/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>discovery-demo</artifactId>
-    <version>1.3.2</version>
+    <version>1.3.3-Hoxton-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
