--- a/spring-cloud-huawei-sample/pom.xml
+++ b/spring-cloud-huawei-sample/pom.xml
@@ -3,20 +3,14 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <groupId>org.springframework.cloud</groupId>
-    <artifactId>spring-cloud-build</artifactId>
-    <version>2.1.6.RELEASE</version>
+    <groupId>com.huaweicloud</groupId>
+    <artifactId>spring-cloud-huawei</artifactId>
+    <version>1.3.3-Hoxton-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.huaweicloud</groupId>
   <artifactId>spring-cloud-huawei-sample</artifactId>
-  <version>1.3.2</version>
   <packaging>pom</packaging>
-  <properties>
-    <java.version>1.8</java.version>
-    <spring-cloud.version>Greenwich.SR5</spring-cloud.version>
-    <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
-  </properties>
+
   <modules>
 <!--    <module>dtm-demo</module>-->
     <module>discovery-demo</module>
