--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,8 @@
   <parent>
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-build</artifactId>
-    <version>2.1.6.RELEASE</version>
+    <!-- This version should match spring-cloud-dependencies 'spring-cloud-build.version' -->
+    <version>2.2.3.RELEASE</version>
   </parent>
 
   <groupId>com.huaweicloud</groupId>
@@ -34,8 +35,11 @@
 
   <properties>
     <java.version>1.8</java.version>
-    <spring-cloud.version>Greenwich.SR5</spring-cloud.version>
-    <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
+    <!-- spring-cloud-dependencies do not import spring-boot-dependencies, spring-boot-dependencies
+     import spring-framework-bom. No need configure spring version. -->
+    <spring-cloud.version>Hoxton.SR4</spring-cloud.version>
+    <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
+    <servicecomb.version>2.0.2</servicecomb.version>
   </properties>
 
   <modules>
