--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,9 +20,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: checkstyle
-      run: mvn clean package findbugs:findbugs -Dmaven.test.skip=true  -Dmaven.javadoc.skip=true
-    - name: build and install
-      run: mvn clean install -Pit -Pdocker -Dmaven.javadoc.skip=true -Dcheckstyle.skip=false -Drat.skip=false
+    - name: Compilation and Installation
+      run: sh scripts/travis.sh install
     - name: publish coverage report
       run: bash <(curl -s https://codecov.io/bash)
