--- a/spring-cloud-huawei-sample/dtm-demo/reserve/Dockerfile
+++ b/spring-cloud-huawei-sample/dtm-demo/reserve/Dockerfile
@@ -4,7 +4,7 @@ ENV LOG_ROOT=/var/log/reserve/
 RUN mkdir -p $APP_ROOT
 RUN mkdir -p $LOG_ROOT
 
-COPY target/reserve-1.3.2/reserve-1.3.2 $APP_ROOT
+COPY target/reserve-1.3.3-Hoxton-SNAPSHOT/reserve-1.3.3-Hoxton-SNAPSHOT $APP_ROOT
 
 
 RUN cd $APP_ROOT && chmod -R 770 .
