--- a/spring-cloud-huawei-sample/dtm-demo/ticket/Dockerfile
+++ b/spring-cloud-huawei-sample/dtm-demo/ticket/Dockerfile
@@ -4,7 +4,7 @@ ENV LOG_ROOT=/var/log/ticket/
 RUN mkdir -p $APP_ROOT
 RUN mkdir -p $LOG_ROOT
 
-COPY target/ticket-1.3.2/ticket-1.3.2 $APP_ROOT
+COPY target/ticket-1.3.3-Hoxton-SNAPSHOT/ticket-1.3.3-Hoxton-SNAPSHOT $APP_ROOT
 
 
 RUN cd $APP_ROOT && chmod -R 770 .
