--- a/spring-cloud-huawei-sample/minimized-demo/consumer-demo/pom.xml
+++ b/spring-cloud-huawei-sample/minimized-demo/consumer-demo/pom.xml
@@ -18,7 +18,7 @@
       <dependency>
         <groupId>com.huaweicloud</groupId>
         <artifactId>spring-cloud-huawei-dependencies</artifactId>
-        <version>1.3.1</version>
+        <version>1.3.5</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -41,6 +41,14 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.3.3.RELEASE</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
