--- a/integration-tests/docker-build-config/pom.xml
+++ b/integration-tests/docker-build-config/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>integration-tests</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.3.3-Hoxton-SNAPSHOT</version>
+    <version>1.3.6</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
