--- a/spring-cloud-huawei-parents/pom.xml
+++ b/spring-cloud-huawei-parents/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei-dependencies</artifactId>
-    <version>1.3.3-Hoxton-SNAPSHOT</version>
+    <version>1.3.6</version>
     <relativePath>../spring-cloud-huawei-dependencies</relativePath>
   </parent>
 
@@ -13,7 +13,7 @@
 
   <artifactId>spring-cloud-huawei-parents</artifactId>
   <packaging>pom</packaging>
-  <version>1.3.3-Hoxton-SNAPSHOT</version>
+  <version>1.3.6</version>
   <name>Spring Cloud Huawei Dependencies</name>
 
   <profiles>
