--- a/spring-cloud-starter-huawei/pom.xml
+++ b/spring-cloud-starter-huawei/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei-parents</artifactId>
-    <version>1.3.3-Hoxton-SNAPSHOT</version>
+    <version>1.3.6</version>
     <relativePath>../spring-cloud-huawei-parents</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,7 @@
   <artifactId>spring-cloud-starter-huawei</artifactId>
   <modules>
     <module>spring-cloud-starter-huawei-servicecomb-discovery</module>
-    <module>spring-cloud-starter-huawei-dtm</module>
+<!--    <module>spring-cloud-starter-huawei-dtm</module>-->
     <module>spring-cloud-starter-huawei-router</module>
     <module>spring-cloud-starter-huawei-config</module>
     <module>spring-cloud-starter-huawei-swagger</module>
