--- a/spring-cloud-huawei-sample/governance-demo/consumer/pom.xml
+++ b/spring-cloud-huawei-sample/governance-demo/consumer/pom.xml
@@ -3,21 +3,13 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
+    <artifactId>governance-demo</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <artifactId>spring-cloud-huawei</artifactId>
     <version>1.3.3-Hoxton-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>spring-cloud-huawei-sample</artifactId>
-  <packaging>pom</packaging>
 
-  <modules>
-<!--    <module>dtm-demo</module>-->
-    <module>discovery-demo</module>
-    <module>config-demo</module>
-    <module>canary-demo</module>
-    <module>swagger-demo</module>
-    <module>gateway-demo</module>
-    <module>governance-demo</module>
-  </modules>
+  <artifactId>consumer</artifactId>
+
+
 </project>
