--- a/spring-cloud-huawei-governance/pom.xml
+++ b/spring-cloud-huawei-governance/pom.xml
@@ -29,10 +29,6 @@
       <version>1.4.0</version>
     </dependency>
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-    </dependency>
-    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
     </dependency>
@@ -48,26 +44,9 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-archaius</artifactId>
     </dependency>
-    <!--dd-->
     <dependency>
-      <groupId>com.alibaba.csp</groupId>
-      <artifactId>sentinel-spring-webflux-adapter</artifactId>
-      <version>1.7.1</version>
-    </dependency>
-    <dependency>
-      <groupId>com.alibaba.csp</groupId>
-      <artifactId>sentinel-spring-webmvc-adapter</artifactId>
-      <version>1.7.1</version>
-    </dependency>
-    <dependency>
-      <groupId>com.alibaba.csp</groupId>
-      <artifactId>sentinel-parameter-flow-control</artifactId>
-      <version>1.7.1</version>
-    </dependency>
-    <dependency>
-      <groupId>com.alibaba.csp</groupId>
-      <artifactId>sentinel-datasource-extension</artifactId>
-      <version>1.7.1</version>
+      <groupId>io.github.openfeign</groupId>
+      <artifactId>feign-core</artifactId>
     </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
