--- a/spring-cloud-huawei-sample/discovery-demo/order-consumer/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/discovery-demo/order-consumer/src/main/resources/application.yaml
@@ -32,7 +32,7 @@ spring:
 
       credentials:
         enabled: true
-        accessKey: your ak
-        secretKey: your sk
+        accessKey: XLZXT9TIJDEYJRQHTBDI
+        secretKey: mxrtiKd6Hkrfta6sWZp6Zz5W1Hc3tTAfIxz9zVvw
         akskCustomCipher: default
-        project: cn-east-2
+        project: cn-north-4
