--- a/integration-tests/discovery-tests/pom.xml
+++ b/integration-tests/discovery-tests/pom.xml
@@ -31,6 +31,7 @@
     <module>price-provider</module>
     <module>order-consumer</module>
     <module>discovery-tests-client</module>
+    <module>price-provider-crossapp</module>
   </modules>
 
 </project>
