--- a/spring-cloud-huawei-swagger/pom.xml
+++ b/spring-cloud-huawei-swagger/pom.xml
@@ -30,23 +30,19 @@
 
   <properties>
     <spring-fox.version>3.0.0</spring-fox.version>
+    <swagger-core.version>2.1.9</swagger-core.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger2</artifactId>
+      <artifactId>springfox-boot-starter</artifactId>
       <version>${spring-fox.version}</version>
     </dependency>
     <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger-ui</artifactId>
-      <version>${spring-fox.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.swagger</groupId>
+      <groupId>io.swagger.core.v3</groupId>
       <artifactId>swagger-core</artifactId>
-      <version>1.5.22</version>
+      <version>${swagger-core.version}</version>
     </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
