--- a/integration-tests/cse-v2/consumer/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v2/consumer/src/main/resources/bootstrap.yml
@@ -33,6 +33,9 @@ spring:
       config:
         serverAddr: ${CSE_V2_CC}
         serverType: kie
+        kie:
+          customLabel: public
+          customLabelValue: default
 
 #      credentials:
 #        account:
