--- a/integration-tests/discovery-tests/order-consumer/pom.xml
+++ b/integration-tests/discovery-tests/order-consumer/pom.xml
@@ -44,6 +44,10 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-openfeign</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-core</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
