--- a/integration-tests/cse-v1/provider/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v1/provider/src/main/resources/bootstrap.yml
@@ -40,5 +40,5 @@ spring:
         enabled: true
         accessKey: ${CREDENTIALS_AK}
         secretKey: ${CREDENTIALS_SK}
-        akskCustomCipher: default
+        cipher: default
         project: cn-south-1
