--- a/spring-cloud-huawei-common/src/test/resources/bootstrap.yml
+++ b/spring-cloud-huawei-common/src/test/resources/bootstrap.yml
@@ -21,5 +21,5 @@ spring:
         enabled: true
         accessKey: your ak
         secretKey: your sk
-        akskCustomCipher: CustomCipher
+        cipher: CustomCipher
         project: cn-east-2
